--- a/src/modules/formManagment/pages/Form.css
+++ b/src/modules/formManagment/pages/Form.css
@@ -8,6 +8,7 @@
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
+  overflow-y: auto;
 }
 
 .sidebar.open {
@@ -475,4 +476,10 @@
   line-height: 0;
   min-width: 0;
   height: 0;
+}
+
+.select-text{
+  text-align: center;
+  margin-top: 25px;
+  font-size: 17px;
 }
